--- a/views/profile.phtml
+++ b/views/profile.phtml
@@ -985,6 +985,7 @@
                         "Time ago" +
                     "</div>" +
                     "<div class='banned'></div>" +
+                    "<div class='pending'></div>" +
                     "<div class='submission'></div>" +
                     "<div class='comment'></div>" +
                     "<div class='demo-url'></div>" +
@@ -1228,9 +1229,13 @@
                     //$dateTime.prop('outerHTML') +
                     $dateDifference.prop('outerHTML') +
                 "</div>" +
+                ((entry.banned == 1) ?
+                    "<div class='banned'>" +
+                    "<i class='fa fa-exclamation-triangle' aria-hidden='true' data-toggle='tooltip' title='Banned'></i>"
+                    + "</div>" : "") +
                 "<div class='banned'>" +
-                ((entry.banned == 1)
-                    ? "<i class='fa fa-exclamation-triangle' aria-hidden='true' data-toggle='tooltip' title='Banned'></i>"
+                ((entry.pending == 1)
+                    ? "<i class='fa fa-hourglass' aria-hidden='true' data-toggle='tooltip' title='Pending - evidence required'></i>"
                     : "") +
                 "</div>" +
                 "<div class='submission'>" +
