Fix formatting issue

--- a/views/changelog.phtml
+++ b/views/changelog.phtml
@@ -131,6 +131,7 @@
                 <div class="demo-url"></div>
                 <div class="youtube"></div>
                 <div class="submission"></div>
+                <div class="submission"></div>
                 <div class="banScore"><?php if (SteamSignIn::loggedInUserIsAdmin()): ?><?php endif; ?></div>
             </div>
             <div id="otherentries">
