Fix bug + announcment

--- a/views/parts/announcement.phtml
+++ b/views/parts/announcement.phtml
@@ -1,11 +1,11 @@
-<?php $cookieName = "site-notification-16-11-2017"; ?>
-<?php $giveAnnouncement = false; ?>
+<?php $cookieName = "site-notification-12-08-2021"; ?>
+<?php $giveAnnouncement = true; ?>
 
 <?php if(!isset($_COOKIE[$cookieName]) && $giveAnnouncement): ?>
 
     <div id="announcement">
         <span class="notification">
-            <b>Announcement:</b> We are currently experiencing issues syncing with the Steam leaderboards. If your score is not showing up, please submit it via your profile.
+            <b>Announcement:</b> New feature <i>"Pending"</i> all new scores inside evidence requirements will only show up on leaderboards when evidence is provided. Until then they are <i>"Pending"</i>. For more information <a href="https://discord.gg/hRwE4Zr" target="_blank"><b>check the discord</b></a>.
         </span>
         <span class="close-btn"></span>
     </div>
