--- a/views/profile.phtml
+++ b/views/profile.phtml
@@ -1100,7 +1100,12 @@
         closeAllChangeMenus();
         openSubmissionForm();
 
-        $submissionForm.find(".addScoreButton").click(function() {
+        $submissionForm.find(".addScoreButton").on('click', function(event) {
+            event.preventDefault();
+            var el = $(this);
+            el.prop('disabled', true);
+            setTimeout(function(){el.prop('disabled', false); }, 1000);
+
             var $youtubeField = $submissionForm.find(".setYoutubeContainer input");
             var $scoreField = $submissionForm.find(".scoreInputContainer input");
             var $commentField = $submissionForm.find(".setCommentContainer input");
@@ -1384,7 +1389,12 @@
             $changeMenu.addClass("open");
             $changeMenuToggleIcon.attr("class", "fa fa-caret-down");
 
-            $changeMenu .find(".button.deleteSubmission").click(function() {
+            $changeMenu .find(".button.deleteSubmission").on('click', function(event) {
+                event.preventDefault();
+                var el = $(this);
+                el.prop('disabled', true);
+                setTimeout(function(){el.prop('disabled', false); }, 1000);
+
                 if (confirm("Are you sure you want to delete this submission?")) {
                     var $form = $(this).closest(".changeForm");
                     var $changeRow = $form.closest(".changeEntry");
@@ -1416,7 +1426,10 @@
                 }
             });
 
-            $changeMenu.find(".button.setComment").click(function(){
+            $changeMenu.find(".button.setComment").on('click', function(event) {
+                event.preventDefault();
+                var el = $(this);
+                el.prop('disabled', true);
                 var $setYoutubeContainer = $(this).parent();
                 var $form = $(this).closest(".changeForm");
                 var $deleteCommentButton = $form.find(".button.deleteComment");
@@ -1461,7 +1474,10 @@
                 }
             });
 
-            $changeMenu.find(".button.deleteComment").click(function(){
+            $changeMenu.find(".button.deleteComment").on('click', function(event) {
+                event.preventDefault();
+                var el = $(this);
+                el.prop('disabled', true);
                 var $deleteCommentButton = $(this);
                 var $form = $(this).closest(".changeForm");
                 var $setCommentContainer = $form.find(".setCommentContainer");
@@ -1494,7 +1510,10 @@
                 }, 'json');
             });
 
-            $changeMenu.find(".button.setYoutube").click(function(){
+            $changeMenu.find(".button.setYoutube").on('click', function(event) {
+                event.preventDefault();
+                var el = $(this);
+                el.prop('disabled', true);
                 var $setYoutubeContainer = $(this).parent();
                 var $form = $(this).closest(".changeForm");
                 var $deleteYoutubeButton = $form.find(".button.deleteYoutube");
@@ -1542,7 +1561,11 @@
                 }
             });
 
-            $changeMenu.find(".button.deleteYoutube").click(function(){
+            $changeMenu.find(".button.deleteYoutube").on('click', function(event) {
+                event.preventDefault();
+                var el = $(this);
+                el.prop('disabled', true);
+                setTimeout(function(){el.prop('disabled', false); }, 1000);
                 var $deleteYoutubeButton = $(this);
                 var $form = $(this).closest(".changeForm");
                 var $setYoutubeContainer = $form.find(".setYoutubeContainer");
@@ -1582,7 +1605,12 @@
                 $(this).parent().parent().find(".filename").html(fileName);
             });
 
-            $changeMenu.find(".button.uploadDemo").click(function(){
+            $changeMenu.find(".button.uploadDemo").on('click', function(event) {
+                event.preventDefault();
+                var el = $(this);
+                el.prop('disabled', true);
+                setTimeout(function(){el.prop('disabled', false); }, 1000);
+
                 var $uploadDemoContainer = $(this).parent();
                 var $form = $(this).closest(".changeForm");
                 var $deleteDemoButton = $form.find(".button.deleteDemo");
@@ -1626,7 +1654,11 @@
                 }
             });
 
-            $changeMenu.find(".button.deleteDemo").click(function(){
+            $changeMenu.find(".button.deleteDemo").on('click', function(event) {
+                event.preventDefault();
+                var el = $(this);
+                el.prop('disabled', true);
+                setTimeout(function(){el.prop('disabled', false); }, 1000);
                 if (confirm("Are you sure you want to delete this demo?")) {
                     var $deleteButton = $(this);
                     var $form = $(this).closest(".changeForm");
