Fix Submission issues + Banned overlap

--- a/views/profile.phtml
+++ b/views/profile.phtml
@@ -1234,13 +1234,11 @@
                     //$dateTime.prop('outerHTML') +
                     $dateDifference.prop('outerHTML') +
                 "</div>" +
-                ((entry.banned == 1) ?
-                    "<div class='banned'>" +
-                    "<i class='fa fa-exclamation-triangle' aria-hidden='true' data-toggle='tooltip' title='Banned'></i>"
-                    + "</div>" : "") +
                 "<div class='banned'>" +
+                ((entry.banned == 1) ?
+                    "<i class='fa fa-exclamation-triangle' aria-hidden='true' data-toggle='tooltip' title='Banned'></i>" : "") +
                 ((entry.pending == 1)
-                    ? "<i class='fa fa-hourglass' aria-hidden='true' data-toggle='tooltip' title='Pending - evidence required'></i>"
+                    ? "<div class='pending'><i class='fa fa-hourglass' aria-hidden='true' data-toggle='tooltip' title='Pending - evidence required'></i></div> "
                     : "") +
                 "</div>" +
                 "<div class='submission'>" +
