--- a/views/parts/navigation.phtml
+++ b/views/parts/navigation.phtml
@@ -96,7 +96,7 @@
           </a>          
       </li>
         <li class="nav_dropdown">
-          <a href="https://github.com/iVerb1/Portal2Boards" target="_blank" style="height: 29px">
+          <a href="https://github.com/p2sr/Portal2Boards" target="_blank" style="height: 29px">
               <div class="nav_icon" style="background: url('/images/github.png'); background-size: 29px 29px;"></div>
               <div class="btnLabel">GitHub</div>
           </a>          
