--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1931,3 +1931,15 @@ body > #youtube #ytplayer {
 .popover-content {
     word-wrap: break-word;
 }
+
+@-moz-document domain(board.portal2.sr) {
+    #changelog .datetime{
+        width: auto !important;
+    }
+    #profile .global-stats .block .number {
+        font-size: 20px !important;
+    }
+    #profile .global-stats .block .title{
+        font-size: 12px !important;
+    }
+}
