--- a/views/parts/announcement.phtml
+++ b/views/parts/announcement.phtml
@@ -5,7 +5,7 @@
 
     <div id="announcement">
         <span class="notification">
-            <b>Announcement:</b> New feature <i>"Pending"</i> all new scores inside evidence requirements will only show up on leaderboards when evidence is provided. Until then they are <i>"Pending"</i>. For more information <a href="https://discord.gg/hRwE4Zr" target="_blank"><b>check the discord</b></a>.
+            <b>Announcement:</b> Top 500 ranks & evidence requirements for top 200. For more information <a href="https://discord.gg/hRwE4Zr" target="_blank"><b>check the discord</b></a>.
         </span>
         <span class="close-btn"></span>
     </div>
